--- a/templates/partial/tab_player_stats_d20.hbs
+++ b/templates/partial/tab_player_stats_d20.hbs
@@ -1,3 +1,7 @@
+<script type = "text/javascript">
+    google.charts.load('current', {packages: ['corechart']});     
+</script>
+
 <div class="col">
     <h1 class="dice-type-title"> {{PLAYER_NAME}} {{localize "DICE_STATS_TEXT.player_data_form.player_name"}}</h1>
     <br>
@@ -343,29 +347,33 @@
         chart.draw(data, chartOptions);
     }
 
-    //Checks to See if charts callback should be made
-    if({{TOTAL_ROLLS.[0]}} > 0 )
-    {
-        google.charts.setOnLoadCallback(drawChartd20Atk);
-    }
+    //Make sure value is in data object
+    {{#if TOTAL_ROLLS includeZero=true}}
 
-    if({{TOTAL_ROLLS.[1]}} > 0 )
-    {
-        google.charts.setOnLoadCallback(drawChartd20Dmg);
-    }
+        //Checks to See if charts callback should be made (If charts should be displayed)
+        if({{TOTAL_ROLLS.[0]}} > 0 )
+        {
+            google.charts.setOnLoadCallback(drawChartd20Atk);
+        }
 
-    if({{TOTAL_ROLLS.[2]}} > 0 )
-    {
-        google.charts.setOnLoadCallback(drawChartd20Save);
-    }
+        if({{TOTAL_ROLLS.[1]}} > 0 )
+        {
+            google.charts.setOnLoadCallback(drawChartd20Dmg);
+        }
 
-    if({{TOTAL_ROLLS.[3]}} > 0 )
-    {
-        google.charts.setOnLoadCallback(drawChartd20Skill);
-    }
+        if({{TOTAL_ROLLS.[2]}} > 0 )
+        {
+            google.charts.setOnLoadCallback(drawChartd20Save);
+        }
 
-    if({{TOTAL_ROLLS.[4]}} > 0 )
-    {
-        google.charts.setOnLoadCallback(drawChartd20Unknown);
-    }
+        if({{TOTAL_ROLLS.[3]}} > 0 )
+        {
+            google.charts.setOnLoadCallback(drawChartd20Skill);
+        }
+
+        if({{TOTAL_ROLLS.[4]}} > 0 )
+        {
+            google.charts.setOnLoadCallback(drawChartd20Unknown);
+        }
+    {{/if}}
 </script>
