--- a/templates/partial/tab_player_stats_d20.hbs
+++ b/templates/partial/tab_player_stats_d20.hbs
@@ -7,7 +7,7 @@
         <h2>{{localize "DICE_STATS_TEXT.player_data_form.blind_rolls" ui_rolls=BLIND_ROLL_COUNT }}</h2>
     </div>
     <br>
-{{#else}}
+{{else}}
     <div class="col">
         <h1 class="dice-type-title"> {{PLAYER_NAME}} {{localize "DICE_STATS_TEXT.player_data_form.player_name"}}</h1>
         <br>
