--- a/templates/partial/tab_player_base.hbs
+++ b/templates/partial/tab_player_base.hbs
@@ -30,7 +30,7 @@
     <!-- Buttons for selecting what tab to be on -->
     <nav class="tabs" data-group="primary-tabs">
         {{#each tabs}}
-            <a class="item" data-tab="{{label}}"><i class="fas fa-dice-d20"></i>{{title}}</a>
+            <a class="item" data-action="refresh" data-tab="{{label}}"><i class="fas fa-dice-d20"></i>{{title}}</a>
         {{/each}}
     </nav>
 
