--- a/templates/partial/tab_player_stats_all_dice.hbs
+++ b/templates/partial/tab_player_stats_all_dice.hbs
@@ -355,10 +355,10 @@
         },
         chartArea:{
             backgroundColor:{
-            //stroke: 'black',
-            //strokeWidth: 5,
             fill: '#faf0e1',
             fillOpacity: 0.1,
+            width: "100%",
+            height: "100%",
             },
         },
         hAxis: {
