fix resizable and center checkboxes

--- a/templates/dice-stats-compare.hbs
+++ b/templates/dice-stats-compare.hbs
@@ -36,49 +36,49 @@
         <br>
         {{#diceStats_ifDisplayDieInfo IS_DIE_DISPLAYED.[0]}}
         <h1 class="dice-type-title">{{localize "DICE_STATS_TEXT.both_forms.section_headings.d2"}}</h1>
-        <div id = "d2ChartGlobal" class="chart-dice-stats"></div>
+        <div id = "d2ChartGlobal" class="comparison-chart-dice-stats"></div>
         <br>
         {{/diceStats_ifDisplayDieInfo}}
 
         {{#diceStats_ifDisplayDieInfo IS_DIE_DISPLAYED.[1]}}
         <h1 class="dice-type-title">{{localize "DICE_STATS_TEXT.both_forms.section_headings.d3"}}</h1>
-        <div id = "d3ChartGlobal" class="chart-dice-stats"></div>
+        <div id = "d3ChartGlobal" class="comparison-chart-dice-stats"></div>
         <br>
         {{/diceStats_ifDisplayDieInfo}}
         
         {{#diceStats_ifDisplayDieInfo IS_DIE_DISPLAYED.[2]}}
         <h1 class="dice-type-title">{{localize "DICE_STATS_TEXT.both_forms.section_headings.d4"}}</h1>
-        <div id = "d4ChartGlobal" class="chart-dice-stats"></div>
+        <div id = "d4ChartGlobal" class="comparison-chart-dice-stats"></div>
         <br>
         {{/diceStats_ifDisplayDieInfo}}
         
         {{#diceStats_ifDisplayDieInfo IS_DIE_DISPLAYED.[3]}}
         <h1 class="dice-type-title">{{localize "DICE_STATS_TEXT.both_forms.section_headings.d6"}}</h1>
-        <div id = "d6ChartGlobal" class="chart-dice-stats"></div>
+        <div id = "d6ChartGlobal" class="comparison-chart-dice-stats"></div>
         <br>
         {{/diceStats_ifDisplayDieInfo}}
         
         {{#diceStats_ifDisplayDieInfo IS_DIE_DISPLAYED.[4]}}
         <h1 class="dice-type-title">{{localize "DICE_STATS_TEXT.both_forms.section_headings.d8"}}</h1>
-        <div id = "d8ChartGlobal" class="chart-dice-stats"></div>
+        <div id = "d8ChartGlobal" class="comparison-chart-dice-stats"></div>
         <br>
         {{/diceStats_ifDisplayDieInfo}}
 
         {{#diceStats_ifDisplayDieInfo IS_DIE_DISPLAYED.[5]}}
         <h1 class="dice-type-title">{{localize "DICE_STATS_TEXT.both_forms.section_headings.d10"}}</h1>
-        <div id = "d10ChartGlobal" class="chart-dice-stats"></div>
+        <div id = "d10ChartGlobal" class="comparison-chart-dice-stats"></div>
         <br>
         {{/diceStats_ifDisplayDieInfo}}
         
         {{#diceStats_ifDisplayDieInfo IS_DIE_DISPLAYED.[6]}}
         <h1 class="dice-type-title">{{localize "DICE_STATS_TEXT.both_forms.section_headings.d12"}}</h1>
-        <div id = "d12ChartGlobal" class="chart-dice-stats"></div>
+        <div id = "d12ChartGlobal" class="comparison-chart-dice-stats"></div>
         <br>
         {{/diceStats_ifDisplayDieInfo}}
         
         {{#diceStats_ifDisplayDieInfo IS_DIE_DISPLAYED.[7]}}
         <h1 class="dice-type-title">{{localize "DICE_STATS_TEXT.both_forms.section_headings.d20"}}</h1>
-        <div id = "d20ChartGlobal" class="chart-dice-stats"></div>
+        <div id = "d20ChartGlobal" class="comparison-chart-dice-stats"></div>
         <br>
         {{/diceStats_ifDisplayDieInfo}}
         
