--- a/styles/dice-stats.css
+++ b/styles/dice-stats.css
@@ -20,7 +20,17 @@
 
 .chart-dice-stats{
     background: transparent;
-    width: auto; 
+    width: 110%; 
+    height: 300px; 
+    margin-top: 0;
+    margin-left: 0;
+    margin-right: 0;
+    margin-bottom: 10;
+}
+
+.comparison-chart-dice-stats{
+    background: transparent;
+    width: 100%; 
     height: 300px; 
     margin-top: 0;
     margin-left: 0;
@@ -34,8 +44,11 @@
 }
 
 div.center-checkboxes{
-    margin: auto;
+    display: flex;
+    white-space: nowrap;
     text-align: center;
+    justify-content: center;
+    align-items: center;
 }
 
 input.form-checkboxes{
