Added german translation and removed hardcoded elements.

--- a/templates/dice-stats-compare.hbs
+++ b/templates/dice-stats-compare.hbs
@@ -109,7 +109,7 @@
                 },
             },
             hAxis: {
-                title: 'Die Number',
+                title: '{{localize 'DICE_STATS_TEXT.google_chart.die'}}',
                 titleTextStyle:{
                     fontSize:20,
                 },
@@ -121,7 +121,7 @@
                 },
             },
             vAxis: {
-                title: 'Number Of Rolls',
+                title: '{{localize 'DICE_STATS_TEXT.google_chart.rolls'}}',
                 titleTextStyle:{
                     fontSize:20,
                 },
