--- a/templates/dice-stats-global.hbs
+++ b/templates/dice-stats-global.hbs
@@ -536,7 +536,7 @@
                 },
             },
             hAxis: {
-                title: 'Die Number',
+                title: '{{localize 'DICE_STATS_TEXT.google_chart.die'}}',
                 titleTextStyle:{
                     fontSize:20,
                 },
@@ -548,7 +548,7 @@
                 },
             },
             vAxis: {
-                title: 'Number Of Rolls',
+                title: '{{localize 'DICE_STATS_TEXT.google_chart.rolls'}}',
                 titleTextStyle:{
                     fontSize:20,
                 },
@@ -568,7 +568,7 @@
         function drawChartd2() {
             // Define the chart to be drawn.
             var data = google.visualization.arrayToDataTable([
-                ['Die Number', 'Number Of rolls'],
+                ['{{localize 'DICE_STATS_TEXT.google_chart.die'}}', '{{localize 'DICE_STATS_TEXT.google_chart.rolls'}}'],
                 ['1',  {{D2_ROLL_DATA.[0]}}],
                 ['2',  {{D2_ROLL_DATA.[1]}}]
             ]);
@@ -581,7 +581,7 @@
         function drawChartd3() {
             // Define the chart to be drawn.
             var data = google.visualization.arrayToDataTable([
-                ['Die Number', 'Number Of rolls'],
+                ['{{localize 'DICE_STATS_TEXT.google_chart.die'}}', '{{localize 'DICE_STATS_TEXT.google_chart.rolls'}}'],
                 ['1',  {{D3_ROLL_DATA.[0]}}],
                 ['2',  {{D3_ROLL_DATA.[1]}}],
                 ['3',  {{D3_ROLL_DATA.[2]}}]
@@ -595,7 +595,7 @@
         function drawChartd4() {
             // Define the chart to be drawn.
             var data = google.visualization.arrayToDataTable([
-                ['Die Number', 'Number Of rolls'],
+                ['{{localize 'DICE_STATS_TEXT.google_chart.die'}}', '{{localize 'DICE_STATS_TEXT.google_chart.rolls'}}'],
                 ['1',   {{D4_ROLL_DATA.[0]}}],
                 ['2',   {{D4_ROLL_DATA.[1]}}],
                 ['3',   {{D4_ROLL_DATA.[2]}}],
@@ -610,7 +610,7 @@
         function drawChartd6() {
             // Define the chart to be drawn.
             var data = google.visualization.arrayToDataTable([
-                ['Die Number', 'Number Of rolls'],
+                ['{{localize 'DICE_STATS_TEXT.google_chart.die'}}', '{{localize 'DICE_STATS_TEXT.google_chart.rolls'}}'],
                 ['1',   {{D6_ROLL_DATA.[0]}}],
                 ['2',   {{D6_ROLL_DATA.[1]}}],
                 ['3',   {{D6_ROLL_DATA.[2]}}],
@@ -627,7 +627,7 @@
         function drawChartd8() {
             // Define the chart to be drawn.
             var data = google.visualization.arrayToDataTable([
-                ['Die Number', 'Number Of rolls'],
+                ['{{localize 'DICE_STATS_TEXT.google_chart.die'}}', '{{localize 'DICE_STATS_TEXT.google_chart.rolls'}}'],
                 ['1',   {{D8_ROLL_DATA.[0]}}],
                 ['2',   {{D8_ROLL_DATA.[1]}}],
                 ['3',   {{D8_ROLL_DATA.[2]}}],
@@ -647,7 +647,7 @@
         function drawChartd10() {
             // Define the chart to be drawn.
             var data = google.visualization.arrayToDataTable([
-                ['Die Number', 'Number Of rolls'],
+                ['{{localize 'DICE_STATS_TEXT.google_chart.die'}}', '{{localize 'DICE_STATS_TEXT.google_chart.rolls'}}'],
                 ['1',   {{D10_ROLL_DATA.[0]}}],
                 ['2',   {{D10_ROLL_DATA.[1]}}],
                 ['3',   {{D10_ROLL_DATA.[2]}}],
@@ -668,7 +668,7 @@
         function drawChartd12() {
             // Define the chart to be drawn.
             var data = google.visualization.arrayToDataTable([
-                ['Die Number', 'Number Of rolls'],
+                ['{{localize 'DICE_STATS_TEXT.google_chart.die'}}', '{{localize 'DICE_STATS_TEXT.google_chart.rolls'}}'],
                 ['1',   {{D12_ROLL_DATA.[0]}}],
                 ['2',   {{D12_ROLL_DATA.[1]}}],
                 ['3',   {{D12_ROLL_DATA.[2]}}],
@@ -691,7 +691,7 @@
         function drawChartd20() {
             // Define the chart to be drawn.
             var data = google.visualization.arrayToDataTable([
-                ['Die Number', 'Number Of rolls'],
+                ['{{localize 'DICE_STATS_TEXT.google_chart.die'}}', '{{localize 'DICE_STATS_TEXT.google_chart.rolls'}}'],
                 ['1',   {{D20_ROLL_DATA.[0]}}],
                 ['2',   {{D20_ROLL_DATA.[1]}}],
                 ['3',   {{D20_ROLL_DATA.[2]}}],
@@ -722,7 +722,7 @@
         function drawChartd100() {
             // Define the chart to be drawn.
             var data = google.visualization.arrayToDataTable([
-                ['Die Number', 'Number Of rolls'],
+                ['{{localize 'DICE_STATS_TEXT.google_chart.die'}}', '{{localize 'DICE_STATS_TEXT.google_chart.rolls'}}'],
                 ['1',   {{D100_ROLL_DATA.[0]}}],
                 ['2',   {{D100_ROLL_DATA.[1]}}],
                 ['3',   {{D100_ROLL_DATA.[2]}}],
