--- a/templates/partial/tab_player_stats_all_dice.hbs
+++ b/templates/partial/tab_player_stats_all_dice.hbs
@@ -1,5 +1,5 @@
 <div class="col">
-    <h1 class="dice-type-title"> {{PLAYER_NAME}} {{localize "DICE_STATS_TEXT.player_data_form.player_name"}}</h1>
+    <h1 class="dice-type-title">{{localize "DICE_STATS_TEXT.player_data_form.player_name" ui_player=PLAYER_NAME}}</h1>
     <br>
     {{#diceStats_ifDisplayDieInfo IS_DIE_DISPLAYED.[0]}}
     {{#diceStats_ifDieUsed TOTAL_ROLLS.[0] }} <!-- Associated Helper in Main -->
@@ -362,7 +362,7 @@
             },
         },
         hAxis: {
-            title: 'Die Number',
+            title: '{{localize 'DICE_STATS_TEXT.google_chart.die'}}',
             titleTextStyle:{
                 fontSize:20,
             },
@@ -374,7 +374,7 @@
             },
         },
         vAxis: {
-            title: 'Number Of Rolls',
+            title: '{{localize 'DICE_STATS_TEXT.google_chart.rolls'}}',
             titleTextStyle:{
                 fontSize:20,
             },
@@ -394,7 +394,7 @@
     function drawChartd2() {
         // Define the chart to be drawn.
         var data = google.visualization.arrayToDataTable([
-            ['Die Number', 'Number Of rolls'],
+            ['{{localize 'DICE_STATS_TEXT.google_chart.die'}}', '{{localize 'DICE_STATS_TEXT.google_chart.rolls'}}'],
             ['1',  {{D2_ROLL_DATA.[0]}}],
             ['2',  {{D2_ROLL_DATA.[1]}}]
         ]);
@@ -407,7 +407,7 @@
     function drawChartd3() {
         // Define the chart to be drawn.
         var data = google.visualization.arrayToDataTable([
-            ['Die Number', 'Number Of rolls'],
+            ['{{localize 'DICE_STATS_TEXT.google_chart.die'}}', '{{localize 'DICE_STATS_TEXT.google_chart.rolls'}}'],
             ['1',  {{D3_ROLL_DATA.[0]}}],
             ['2',  {{D3_ROLL_DATA.[1]}}],
             ['3',  {{D3_ROLL_DATA.[2]}}]
@@ -421,7 +421,7 @@
     function drawChartd4() {
         // Define the chart to be drawn.
         var data = google.visualization.arrayToDataTable([
-            ['Die Number', 'Number Of rolls'],
+            ['{{localize 'DICE_STATS_TEXT.google_chart.die'}}', '{{localize 'DICE_STATS_TEXT.google_chart.rolls'}}'],
             ['1',   {{D4_ROLL_DATA.[0]}}],
             ['2',   {{D4_ROLL_DATA.[1]}}],
             ['3',   {{D4_ROLL_DATA.[2]}}],
@@ -436,7 +436,7 @@
     function drawChartd6() {
         // Define the chart to be drawn.
         var data = google.visualization.arrayToDataTable([
-            ['Die Number', 'Number Of rolls'],
+            ['{{localize 'DICE_STATS_TEXT.google_chart.die'}}', '{{localize 'DICE_STATS_TEXT.google_chart.rolls'}}'],
             ['1',   {{D6_ROLL_DATA.[0]}}],
             ['2',   {{D6_ROLL_DATA.[1]}}],
             ['3',   {{D6_ROLL_DATA.[2]}}],
@@ -453,7 +453,7 @@
     function drawChartd8() {
         // Define the chart to be drawn.
         var data = google.visualization.arrayToDataTable([
-            ['Die Number', 'Number Of rolls'],
+            ['{{localize 'DICE_STATS_TEXT.google_chart.die'}}', '{{localize 'DICE_STATS_TEXT.google_chart.rolls'}}'],
             ['1',   {{D8_ROLL_DATA.[0]}}],
             ['2',   {{D8_ROLL_DATA.[1]}}],
             ['3',   {{D8_ROLL_DATA.[2]}}],
@@ -473,7 +473,7 @@
     function drawChartd10() {
         // Define the chart to be drawn.
         var data = google.visualization.arrayToDataTable([
-            ['Die Number', 'Number Of rolls'],
+            ['{{localize 'DICE_STATS_TEXT.google_chart.die'}}', '{{localize 'DICE_STATS_TEXT.google_chart.rolls'}}'],
             ['1',   {{D10_ROLL_DATA.[0]}}],
             ['2',   {{D10_ROLL_DATA.[1]}}],
             ['3',   {{D10_ROLL_DATA.[2]}}],
@@ -494,7 +494,7 @@
     function drawChartd12() {
         // Define the chart to be drawn.
         var data = google.visualization.arrayToDataTable([
-            ['Die Number', 'Number Of rolls'],
+            ['{{localize 'DICE_STATS_TEXT.google_chart.die'}}', '{{localize 'DICE_STATS_TEXT.google_chart.rolls'}}'],
             ['1',   {{D12_ROLL_DATA.[0]}}],
             ['2',   {{D12_ROLL_DATA.[1]}}],
             ['3',   {{D12_ROLL_DATA.[2]}}],
@@ -517,7 +517,7 @@
     function drawChartd20() {
         // Define the chart to be drawn.
         var data = google.visualization.arrayToDataTable([
-            ['Die Number', 'Number Of rolls'],
+            ['{{localize 'DICE_STATS_TEXT.google_chart.die'}}', '{{localize 'DICE_STATS_TEXT.google_chart.rolls'}}'],
             ['1',   {{D20_ROLL_DATA.[0]}}],
             ['2',   {{D20_ROLL_DATA.[1]}}],
             ['3',   {{D20_ROLL_DATA.[2]}}],
@@ -548,7 +548,7 @@
     function drawChartd100() {
         // Define the chart to be drawn.
         var data = google.visualization.arrayToDataTable([
-            ['Die Number', 'Number Of rolls'],
+            ['{{localize 'DICE_STATS_TEXT.google_chart.die'}}', '{{localize 'DICE_STATS_TEXT.google_chart.rolls'}}'],
             ['1',   {{D100_ROLL_DATA.[0]}}],
             ['2',   {{D100_ROLL_DATA.[1]}}],
             ['3',   {{D100_ROLL_DATA.[2]}}],
