--- a/templates/partial/tab_player_stats_d20.hbs
+++ b/templates/partial/tab_player_stats_d20.hbs
@@ -9,7 +9,7 @@
     <br>
 {{else}}
     <div class="col">
-        <h1 class="dice-type-title"> {{PLAYER_NAME}} {{localize "DICE_STATS_TEXT.player_data_form.player_name"}}</h1>
+        <h1 class="dice-type-title">{{localize "DICE_STATS_TEXT.player_data_form.player_name" ui_player=PLAYER_NAME}}</h1>
         <br>
         
         <!--
@@ -159,7 +159,7 @@
                 },
             },
             hAxis: {
-                title: 'Die Number',
+                title: '{{localize 'DICE_STATS_TEXT.google_chart.die'}}',
                 titleTextStyle:{
                     fontSize:20,
                 },
@@ -171,7 +171,7 @@
                 },
             },
             vAxis: {
-                title: 'Number Of Rolls',
+                title: '{{localize 'DICE_STATS_TEXT.google_chart.rolls'}}',
                 titleTextStyle:{
                     fontSize:20,
                 },
@@ -192,7 +192,7 @@
             // Define the chart to be drawn.
             var data = google.visualization.arrayToDataTable(
                 [
-                    ['Die Number', 'Number Of rolls'],
+                    ['{{localize 'DICE_STATS_TEXT.google_chart.die'}}', '{{localize 'DICE_STATS_TEXT.google_chart.rolls'}}'],
                     ['1',   {{D20_ATK.[0]}}],
                     ['2',   {{D20_ATK.[1]}}],
                     ['3',   {{D20_ATK.[2]}}],
@@ -225,7 +225,7 @@
             // Define the chart to be drawn.
             var data = google.visualization.arrayToDataTable(
                 [
-                    ['Die Number', 'Number Of rolls'],
+                    ['{{localize 'DICE_STATS_TEXT.google_chart.die'}}', '{{localize 'DICE_STATS_TEXT.google_chart.rolls'}}'],
                     ['1',   {{D20_DMG.[0]}}],
                     ['2',   {{D20_DMG.[1]}}],
                     ['3',   {{D20_DMG.[2]}}],
@@ -258,7 +258,7 @@
             // Define the chart to be drawn.
             var data = google.visualization.arrayToDataTable(
                 [
-                    ['Die Number', 'Number Of rolls'],
+                    ['{{localize 'DICE_STATS_TEXT.google_chart.die'}}', '{{localize 'DICE_STATS_TEXT.google_chart.rolls'}}'],
                     ['1',   {{D20_SAVE.[0]}}],
                     ['2',   {{D20_SAVE.[1]}}],
                     ['3',   {{D20_SAVE.[2]}}],
@@ -291,7 +291,7 @@
             // Define the chart to be drawn.
             var data = google.visualization.arrayToDataTable(
                 [
-                    ['Die Number', 'Number Of rolls'],
+                    ['{{localize 'DICE_STATS_TEXT.google_chart.die'}}', '{{localize 'DICE_STATS_TEXT.google_chart.rolls'}}'],
                     ['1',   {{D20_SKILL.[0]}}],
                     ['2',   {{D20_SKILL.[1]}}],
                     ['3',   {{D20_SKILL.[2]}}],
@@ -324,7 +324,7 @@
             // Define the chart to be drawn.
             var data = google.visualization.arrayToDataTable(
                 [
-                    ['Die Number', 'Number Of rolls'],
+                    ['{{localize 'DICE_STATS_TEXT.google_chart.die'}}', '{{localize 'DICE_STATS_TEXT.google_chart.rolls'}}'],
                     ['1',   {{D20_UNKNOWN.[0]}}],
                     ['2',   {{D20_UNKNOWN.[1]}}],
                     ['3',   {{D20_UNKNOWN.[2]}}],
