--- a/templates/partial/tab_player_base.hbs
+++ b/templates/partial/tab_player_base.hbs
@@ -40,19 +40,22 @@
             <div class="tab" data-tab="{{label}}" data-group="primary-tabs">
                 <!-- Need to add section to tabbedplayerstats form to add more dice -->
 
+                <!-- did we select 2dx Button -->
                 {{#if twoDx}}
-                    {{> 'modules/dice-stats/templates/partial/2dx.hbs' ../playerData }}
+                    {{> 'modules/dice-stats/templates/partial/tab_player_stats_2dx.hbs' ../playerData }}
                 {{/if}}
 
-                <!-- Display D20 info or display the warning display if the data is unsupported -->
-                {{#if ../playerData/HAVE_DICE_CATAGORIES.[DS_GLOBALS.DIE_TYPE.D20]}}
-                    {{#if d20}} 
+                <!-- Did we select D20 Button? -->
+                {{#if d20}} 
+                    <!-- [DS_GLOBALS.DIE_TYPE.D20] == 7 -->
+                    {{#diceStats_ifDieUsed playerData/HAVE_DICE_SUB_CATAGORIES.[7]}}
                         {{> 'modules/dice-stats/templates/partial/tab_player_stats_d20.hbs' ../playerData }}
-                    {{/if}}
-                {{else}}
-                    {{> 'modules/dice-stats/templates/partial/tab_player_unsupported_info.hbs'}}
+                    {{else}}
+                        {{> 'modules/dice-stats/templates/partial/tab_player_unsupported_info.hbs'}}
+                    {{/diceStats_ifDieUsed}}
                 {{/if}}
-
+               
+                <!-- Did we select 'All Stats' Button -->
                 {{#if base}}
                     {{> 'modules/dice-stats/templates/partial/tab_player_stats_all_dice.hbs' ../playerData }}
                 {{/if}}
