--- a/templates/partial/tab_player_base.hbs
+++ b/templates/partial/tab_player_base.hbs
@@ -48,15 +48,15 @@
                 <!-- Did we select D20 Button? -->
                 {{#if d20}} 
                     <!-- [DS_GLOBALS.DIE_TYPE.D20] == 7 -->
-                    {{#diceStats_ifDieUsed playerData/HAVE_DICE_SUB_CATAGORIES.[7]}}
+                    {{#diceStats_isTrue ../playerData.HAVE_DICE_SUB_CATAGORIES.[7] }}
                         {{> 'modules/dice-stats/templates/partial/tab_player_stats_d20.hbs' ../playerData }}
                     {{else}}
                         {{> 'modules/dice-stats/templates/partial/tab_player_unsupported_info.hbs'}}
-                    {{/diceStats_ifDieUsed}}
+                    {{/diceStats_isTrue}}
                 {{/if}}
                
                 <!-- Did we select 'All Stats' Button -->
-                {{#if base}}
+                {{#if base }}
                     {{> 'modules/dice-stats/templates/partial/tab_player_stats_all_dice.hbs' ../playerData }}
                 {{/if}}
             </div>
