add min value 0 to charts

--- a/templates/dice-stats-compare.hbs
+++ b/templates/dice-stats-compare.hbs
@@ -134,6 +134,7 @@
                 minorGridlines:{
                     color:'black',
                 },
+                minValue: 0,
             },
             legend: 'right',
         }
