--- a/templates/dice-stats-global.hbs
+++ b/templates/dice-stats-global.hbs
@@ -561,6 +561,7 @@
                 minorGridlines:{
                     color:'black',
                 },
+                minValue: 0,
             },
             legend: 'none',
         }
