--- a/templates/dice-stats-player.hbs
+++ b/templates/dice-stats-player.hbs
@@ -495,6 +495,7 @@
                 minorGridlines:{
                     color:'black',
                 },
+                minValue: 0,
             },
             legend: 'none',
         }
