--- a/templates/partial/tab_player_stats_all_dice.hbs
+++ b/templates/partial/tab_player_stats_all_dice.hbs
@@ -387,6 +387,7 @@
             minorGridlines:{
                 color:'black',
             },
+            minValue: 0,
         },
         legend: 'none',
     }
