--- a/templates/partial/tab_player_stats_d20.hbs
+++ b/templates/partial/tab_player_stats_d20.hbs
@@ -184,6 +184,7 @@
                 minorGridlines:{
                     color:'black',
                 },
+                minValue: 0,
             },
             legend: 'none',
         }
