works, but unknown chart includes Ability dice

--- a/templates/partial/tab_player_stats_d20.hbs
+++ b/templates/partial/tab_player_stats_d20.hbs
@@ -18,7 +18,8 @@
                 DMG: 1,
                 SAVE: 2,
                 SKILL: 3,
-                UNKNOWN: 4   
+                ABILITY: 4,
+                UNKNOWN: 5   
             }
         -->
 
