--- a/templates/partial/tab_player_stats_d20.hbs
+++ b/templates/partial/tab_player_stats_d20.hbs
@@ -24,7 +24,7 @@
         -->
 
         {{#diceStats_ifDieUsed D20_ROLLCOUNT.[0] }} <!-- if Have D20 ATK Rolls -->
-            <h1 class="dice-type-title">D20 Atack Rolls</h1>
+            <h1 class="dice-type-title">{{localize "DICE_STATS_TEXT.player_data_form.tab_d20_rolls.attack"}}</h1>
             <div id = "d20AtkChart" class="chart-dice-stats"></div>
             <table> <!-- Table Of Rolled Stats -->
                 <tr>
@@ -48,7 +48,7 @@
         {{/diceStats_ifDieUsed}}
 
         {{#diceStats_ifDieUsed D20_ROLLCOUNT.[1] }} <!-- if Have D20 Damage Rolls -->
-            <h1 class="dice-type-title">D20 Damage Rolls</h1>
+            <h1 class="dice-type-title">{{localize "DICE_STATS_TEXT.player_data_form.tab_d20_rolls.damage"}}</h1>
             <div id = "d20DmgChart" class="chart-dice-stats"></div>
             <table> <!-- Table Of Rolled Stats -->
                 <tr>
@@ -72,7 +72,7 @@
         {{/diceStats_ifDieUsed}}
 
         {{#diceStats_ifDieUsed D20_ROLLCOUNT.[2] }} <!-- if Have D20 Save Rolls -->
-            <h1 class="dice-type-title">D20 Save Rolls</h1>
+            <h1 class="dice-type-title">{{localize "DICE_STATS_TEXT.player_data_form.tab_d20_rolls.save"}}</h1>
             <div id = "d20SaveChart" class="chart-dice-stats"></div>
             <table> <!-- Table Of Rolled Stats -->
                 <tr>
@@ -96,7 +96,7 @@
         {{/diceStats_ifDieUsed}}
 
         {{#diceStats_ifDieUsed D20_ROLLCOUNT.[3] }} <!-- if Have D20 Skill Rolls -->
-            <h1 class="dice-type-title">D20 Skill Rolls</h1>
+            <h1 class="dice-type-title">{{localize "DICE_STATS_TEXT.player_data_form.tab_d20_rolls.skill"}}</h1>
             <div id = "d20SkillChart" class="chart-dice-stats"></div>
             <table> <!-- Table Of Rolled Stats -->
                 <tr>
@@ -120,7 +120,7 @@
         {{/diceStats_ifDieUsed}}
 
         {{#diceStats_ifDieUsed D20_ROLLCOUNT.[4] }} <!-- if Have D20 Ability Rolls -->
-            <h1 class="dice-type-title">D20 Ability Rolls</h1>
+            <h1 class="dice-type-title">{{localize "DICE_STATS_TEXT.player_data_form.tab_d20_rolls.ability"}}</h1>
             <div id = "d20AbilityChart" class="chart-dice-stats"></div>
             <table> <!-- Table Of Rolled Stats -->
                 <tr>
@@ -144,7 +144,7 @@
         {{/diceStats_ifDieUsed}}
 
         {{#diceStats_ifDieUsed D20_ROLLCOUNT.[5] }} <!-- if Have D20 Unknown Rolls -->
-            <h1 class="dice-type-title">D20 Unknown Rolls</h1>
+            <h1 class="dice-type-title">{{localize "DICE_STATS_TEXT.player_data_form.tab_d20_rolls.unknown"}}</h1>
             <div id = "d20UnknownChart" class="chart-dice-stats"></div>
             <table> <!-- Table Of Rolled Stats -->
                 <tr>
