--- a/templates/partial/tab_player_unsupported_info.hbs
+++ b/templates/partial/tab_player_unsupported_info.hbs
@@ -1,5 +1,12 @@
 <div>
-    <h2> Feature not supported for your current system</h2>
+    <h2 class="tab-unsupported-heading"> 
+        {{localize "DICE_STATS_TEXT.player_data_form.tab_unsupported.tab_unsuported_heading"}}
+    </h2>
     <br>
-    <p> Please submit a feature request on the github if you would like the information added </p>
+    <p class="tab-unsupported-body"> 
+        {{localize "DICE_STATS_TEXT.player_data_form.tab_unsupported.tab_unsuported_body"}}
+    </p>
+    <a href="https://github.com/jacobwojoski/dice-stats/issues">
+        {{localize "DICE_STATS_TEXT.player_data_forms.tab_unsupported.tab_unsuported_link"}} 
+    </a>
 </div>
