fix link not having correct text

--- a/templates/partial/tab_player_unsupported_info.hbs
+++ b/templates/partial/tab_player_unsupported_info.hbs
@@ -7,6 +7,6 @@
         {{localize "DICE_STATS_TEXT.player_data_form.tab_unsupported.tab_unsuported_body"}}
     </p>
     <a href="https://github.com/jacobwojoski/dice-stats/issues">
-        {{localize "DICE_STATS_TEXT.player_data_forms.tab_unsupported.tab_unsuported_link"}} 
+        {{localize "DICE_STATS_TEXT.player_data_form.tab_unsupported.tab_unsuported_link"}} 
     </a>
 </div>
