fix unsupported tab class's

--- a/styles/dice-stats.css
+++ b/styles/dice-stats.css
@@ -96,6 +96,8 @@ button.blind-roll-rollcount{
 }
 
 .templates-tab-unsupported-heading{
+    vertical-align: middle;
+    align-self: center;
     text-align: center;
 }
 
