--- a/templates/partial/tab_player_unsupported_info.hbs
+++ b/templates/partial/tab_player_unsupported_info.hbs
@@ -1,9 +1,10 @@
 <div>
-    <h2 class="tab-unsupported-heading"> 
-        {{localize "DICE_STATS_TEXT.player_data_form.tab_unsupported.tab_unsuported_heading"}}
-    </h2>
     <br>
-    <p class="tab-unsupported-body"> 
+    <h1 class="templates-tab-unsupported-heading"> 
+        {{localize "DICE_STATS_TEXT.player_data_form.tab_unsupported.tab_unsuported_heading"}}
+    </h1>
+    <br>
+    <p class="templates-tab-unsupported-body"> 
         {{localize "DICE_STATS_TEXT.player_data_form.tab_unsupported.tab_unsuported_body"}}
     </p>
     <a href="https://github.com/jacobwojoski/dice-stats/issues">
